Finished collapse chain; fixed reg and log start position and style, form reset; refactor register summary

--- a/css/components/_standard_button.scss
+++ b/css/components/_standard_button.scss
@@ -2,8 +2,9 @@
   background-color: $orange;
   font-size: $font-medium;
   padding: 0.6em 1.4em;
+  margin: 0 auto;
   transform: skewX(-10deg);
-  box-shadow: 0.2rem solid $box-shadow;
+  box-shadow: $box-shadow;
 
   &-wrapper {
     transform: skewX(10deg);
